Add tabs for content
